--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "Victor-portfolio",
+  "homepage": "https://github.com/VictorSerradell/Portafolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "gh-pages": "^6.0.0",
     "next": "^13.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
