--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.8",
+    "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-sticky": "^6.0.3",
     "sharp": "^0.31.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
