--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material/card": "^14.0.0",
     "@nextui-org/react": "^2.2.8",
+    "codegpt-nextjs": "file:../../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.4/standalone",
     "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
     "next": "^14.0.1",
@@ -24,6 +25,7 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "serve": "^14.2.1",
     "tailwindcss": "^3.3.5"
   }
 }
