--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/VictorSerradell/Portafolio",
-  "name": "ortfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,21 +12,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material/card": "^14.0.0",
-    "@nextui-org/react": "^2.2.8",
-    "codegpt-nextjs": "file:../../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.4/standalone",
-    "framer-motion": "^10.16.4",
     "gh-pages": "^6.0.0",
-    "next": "^14.0.1",
+    "next": "^15.13.0",
     "node-fetch": "^3.3.2",
-    "ortfolio": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-sticky": "^6.0.3",
-    "sass": "^1.69.5",
+    "sass": "^1.94.0",
     "sharp": "^0.31.3",
-    "Victor-portfolio": "file:",
-    "VictorPortfolio": "file:"
+    "@nextui-org/react": "^2.6.11",
+    "framer-motion": "^11.11.9",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "serve": "^14.2.1",
